recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:7: error: ';' expected but ')' found.
    tree(steps-1,length*shrink,angle,shrink));
                                            ^